--- a/style.css
+++ b/style.css
@@ -86,3 +86,23 @@ table{
     grid-row: 1 / span 3; */
     transform: skewY(-16deg)
   }
+
+
+  .header_wrap {
+    width: 100vw;
+    display: flex;
+    position: fixed;
+    justify-content: space-between;
+    height: 5vh;
+    background-color: #000000;
+    list-style-type: none;
+    text-align: center;
+    z-index: 999;
+  }
+  
+  .header_wrap li {
+    display: inline-block;
+    font-size: 1.2rem;
+    line-height: 5vh;
+    padding-left: 1vw;
+  }
