--- a/style.css
+++ b/style.css
@@ -1,34 +1,72 @@
 p {
     color: rgb(54, 63, 68);
     font-size: 15px;
-    border: 2px solid black;
+    /* border: 2px solid rgb(122, 122, 122); */
     background-color: rgb(255, 255, 255);
-    padding: 10px 30% 10px 10px;
+    padding: 10px 10px 10px 10px;
     font-family: "Noto Serif KR", serif;
-    word-break: keep-all;
-    margin-left:100px;
+    margin-left:10px;
+    transform: skewY(-4deg)
+
 
 }
+
+
+.content {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  text-align: center;
+}
+
+.content p {
+  margin: 24px 0;
+}
+
+a {
+  color: rgb(38, 0, 255);
+  text-decoration: none;
+}
+
+a:hover {
+  color:crimson
+  /* text-decoration: underline; */
+}
+
+img {
+  margin-top: 20px;
+}
+
 
 body {
     font-family: "Noto Serif KR", serif;
-    background-color: slategray;
+    background-color: rgb(255, 255, 255);
     line-height: 1.5;
+    word-break: keep-all;
 }
 
 .frame{
-    margin: 10px 10px 10px 10%;
-    padding:20px 20px 20px 20px;
-    background-color: Chartreuse;
-    border-width:1px;
-    border-style: dotted;
-
+    margin: 10px 8px 8px 8px;
+    padding:14px 30% 10% 10%;
+    line-height: 1.8;
+    background-color: rgb(247, 247, 247);
+    border-width:3px;
+    /* border-style: dotted; */
 }
+
+f2{
+  padding:10px;
+  background-color:aliceblue
+  /* width: 50%; */
+}
+
 h1{
     font-size: 36px;
     font-weight: 400;
     line-height: 44px;
-    padding: 10px 10px 10px 10px;
+    padding: 20px 50px 100px 10px;
 }
 h2{
     border-style: dotted;
@@ -64,7 +102,7 @@ table{
     grid-gap: 4px;
     background-color: rgb(114, 114, 114);
     padding: 20px;
-    transform: skewY(8deg)
+    transform: skewY(4deg)
 
   }
   
@@ -84,17 +122,18 @@ table{
   .item3:nth-child(3){
     /* grid-column: 1 / span 2;
     grid-row: 1 / span 3; */
-    transform: skewY(-16deg)
+    transform: skewY(-8deg)
   }
 
 
   .header_wrap {
-    width: 100vw;
+    width: 20vw;
+    right: 10px;
     display: flex;
     position: fixed;
     justify-content: space-between;
-    height: 5vh;
-    background-color: #000000;
+    height: 10vh;
+    background-color: #ffffff;
     list-style-type: none;
     text-align: center;
     z-index: 999;
@@ -102,7 +141,7 @@ table{
   
   .header_wrap li {
     display: inline-block;
-    font-size: 1.2rem;
+        font-size: 1.2rem;
     line-height: 5vh;
-    padding-left: 1vw;
+    padding-bottom: 40vw;
   }
