--- a/style.css
+++ b/style.css
@@ -1,89 +1,107 @@
+body {
+  font-family: "Gothic A1", sans-serif;
+  background-color: rgb(231, 231, 231);
+  line-height: 1.5;
+  word-break: keep-all;
+}
+
+.font-big {
+	/* background:rgb(0, 0, 0); */
+  font-size:120%;
+	}	
+
+.font-small {
+    font-size:80%;
+    line-height:1.3;
+	}
+
+.font-title {
+    font-size:5rem;
+    line-height:1.1;
+	}
+
 p {
-    color: rgb(54, 63, 68);
-    font-size: 15px;
-    /* border: 2px solid rgb(122, 122, 122); */
-    background-color: rgb(255, 255, 255);
-    padding: 10px 10px 10px 10px;
-    font-family: "Noto Serif KR", serif;
-    margin-left:10px;
-    transform: skewY(-4deg)
-
-
+  color: rgb(54, 63, 68);
+  font-size: 15px;
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+  margin-left: 10px;
+  transform: skewY(-4deg);
 }
 
-
-.content {
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 80%;
-  text-align: center;
-}
-
-.content p {
-  margin: 24px 0;
-}
-
-a {
+a{
   color: rgb(38, 0, 255);
-  text-decoration: none;
+  text-decoration-line:underline;
 }
 
 a:hover {
-  color:crimson
-  /* text-decoration: underline; */
+  color: rgb(0, 0, 0);
+  text-decoration-line:underline;
 }
 
 img {
   margin-top: 20px;
 }
 
-
-body {
-    font-family: "Noto Serif KR", serif;
-    background-color: rgb(255, 255, 255);
-    line-height: 1.5;
-    word-break: keep-all;
+.frame {
+  margin: 10px 8px;
+  padding: 14px 30% 10% 10%;
+  line-height: 1.8;
+  background-color: rgb(247, 247, 247);
+  border-width: 3px;
 }
 
-.frame{
-    margin: 10px 8px 8px 8px;
-    padding:14px 30% 10% 10%;
-    line-height: 1.8;
-    background-color: rgb(247, 247, 247);
-    border-width:3px;
-    /* border-style: dotted; */
+f2 {
+  padding: 10px;
+  background-color: aliceblue;
 }
 
-f2{
-  padding:10px;
-  background-color:aliceblue
-  /* width: 50%; */
+mytexts{
+  position: absolute;
+  left: 32vw;
+  /* right: 40px; */
+  top: 0px;
+  padding-top: 130px;
+  padding-bottom: 50px;
 }
 
-h1{
-    font-size: 36px;
-    font-weight: 400;
-    line-height: 44px;
-    padding: 20px 50px 100px 10px;
-}
-h2{
-    border-style: dotted;
-    border-width: 1px;
-    border-color: lightseagreen;
+titletexts{
+  position: fixed;
+  left: 1%;
+  right: 68vw;
+  padding-top: 5px;
+  font-size:3vw;
+  line-height: 1.4;
+
 }
 
-table{
-    width: 90%;
-    table-layout: auto;
-    border-style: dotted;
-    border-width: 7px;
-    border-color: rgb(255, 255, 255);
+.titletexts_wrap{
+  transform: skewY(-10deg);
 }
 
-#heading{
-    color:white;
+h1 {
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 44px;
+  padding: 20px 50px 100px 10px;
+}
+
+h2 {
+  border-style: dotted;
+  border-width: 1px;
+  border-color: lightseagreen;
+}
+
+table {
+  width: 90%;
+  table-layout: auto;
+  border-style: dotted;
+  border-width: 7px;
+  border-color: rgb(255, 255, 255);
+}
+
+#heading {
+  color: white;
 }
 
 .noto-serif-kr-regular {
@@ -93,55 +111,104 @@ table{
   font-style: normal;
 }
 
-
 .grid-container {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: repeat(3,minimax(200px,auto));
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: repeat(3, minmax(200px, auto));
+  grid-gap: 4px;
+  background-color: rgb(114, 114, 114);
+  padding: 20px;
+  transform: skewY(4deg);
+}
 
-    grid-gap: 4px;
-    background-color: rgb(114, 114, 114);
-    padding: 20px;
-    transform: skewY(4deg)
+.grid-container > div {
+  background-color: rgba(255, 255, 255);
+  text-align: left;
+  padding: 10px;
+  font-size: 10px;
+}
 
-  }
-  
-  .grid-container > div {
-    background-color: rgba(255, 255, 255);
-    text-align: left;
-    padding: 10px 10px;
-    font-size: 10px;
-  }
+.item1 {
+  grid-column: 1 / span 2;
+  grid-row: 1 / span 3;
+}
 
-  .item1:nth-child(1){
-    grid-column: 1 / span 2;
-    grid-row: 1 / span 3;
-    /* transform: skewY(-8deg) */
-  }
+.item3 {
+  transform: skewY(-8deg);
+}
 
-  .item3:nth-child(3){
-    /* grid-column: 1 / span 2;
-    grid-row: 1 / span 3; */
-    transform: skewY(-8deg)
-  }
+.header_wrap {
+  width: 20vw;
+  left: 10px;
+  bottom: 10px;
+  display:flex;
+  position: fixed;
+  justify-content: space-between;
+  height: 10vh;
+  list-style-type: disc;
+  text-align: left;
+  z-index: 999;
+}
+
+.header_wrap li {
+  display: inline-block;
+  font-size: 1.2rem;
+  line-height: 5vh;
+  padding-bottom: 40vw;
+}
 
 
-  .header_wrap {
-    width: 20vw;
-    right: 10px;
-    display: flex;
-    position: fixed;
-    justify-content: space-between;
-    height: 10vh;
-    background-color: #ffffff;
-    list-style-type: none;
-    text-align: center;
-    z-index: 999;
-  }
-  
-  .header_wrap li {
-    display: inline-block;
-        font-size: 1.2rem;
-    line-height: 5vh;
-    padding-bottom: 40vw;
-  }
+
+.gothic-a1-black {
+  font-family: "Gothic A1", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.gothic-a1-extrabold {
+  font-family: "Gothic A1", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.gothic-a1-bold {
+  font-family: "Gothic A1", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.gothic-a1-semibold {
+  font-family: "Gothic A1", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.gothic-a1-medium {
+  font-family: "Gothic A1", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.gothic-a1-regular {
+  font-family: "Gothic A1", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.gothic-a1-light {
+  font-family: "Gothic A1", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.gothic-a1-extralight {
+  font-family: "Gothic A1", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.gothic-a1-thin {
+  font-family: "Gothic A1", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
