--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
-  font-family: "Gothic A1", sans-serif;
-  background-color: rgb(231, 231, 231);
+  font-family: "Pretendard", sans-serif;
+  background-color: rgb(255, 255, 255);
   line-height: 1.5;
   word-break: keep-all;
 }
 
+
+
 .font-big {
-	/* background:rgb(0, 0, 0); */
-  font-size:120%;
+  font-size:150%;
 	}	
 
 .font-small {
@@ -18,6 +19,7 @@ body {
 .font-title {
     font-size:5rem;
     line-height:1.1;
+    color:red
 	}
 
 p {
@@ -25,8 +27,11 @@ p {
   font-size: 15px;
   background-color: rgb(255, 255, 255);
   padding: 10px;
+  stroke-width: 1;
+  border-style:dashed;
   margin-left: 10px;
   transform: skewY(-4deg);
+  max-width: 40%;
 }
 
 a{
@@ -39,16 +44,29 @@ a:hover {
   text-decoration-line:underline;
 }
 
+.menu{
+  text-align-last: center;
+  background-color: orangered;
+
+}
+
+.menu:hover{
+  background-color: rgb(255, 255, 255);
+
+}
+
+
 img {
   margin-top: 20px;
 }
 
 .frame {
   margin: 10px 8px;
-  padding: 14px 30% 10% 10%;
+  padding: 300px 20% 10% 10%;
   line-height: 1.8;
   background-color: rgb(247, 247, 247);
   border-width: 3px;
+  
 }
 
 f2 {
@@ -56,27 +74,36 @@ f2 {
   background-color: aliceblue;
 }
 
+
+
 mytexts{
   position: absolute;
-  left: 32vw;
-  /* right: 40px; */
+  left: 20vw;
   top: 0px;
-  padding-top: 130px;
+  padding-top: 150px;
   padding-bottom: 50px;
 }
 
+.archive{
+    display: flex block;
+    flex-flow: row wrap;
+}
+
 titletexts{
+  font-family: 'Pickle-Standard-0';
   position: fixed;
-  left: 1%;
+  color: orangered;
+  /* left: 1%; */
   right: 68vw;
-  padding-top: 5px;
+  padding-top: 30px;
   font-size:3vw;
-  line-height: 1.4;
+  line-height: 1.2;
 
 }
 
 .titletexts_wrap{
   transform: skewY(-10deg);
+  text-align:center;
 }
 
 h1 {
@@ -84,6 +111,7 @@ h1 {
   font-weight: 400;
   line-height: 44px;
   padding: 20px 50px 100px 10px;
+
 }
 
 h2 {
@@ -104,21 +132,15 @@ table {
   color: white;
 }
 
+.quote{
+  color:grey;
+}
+
 .noto-serif-kr-regular {
   font-family: "Noto Serif KR", serif;
   font-optical-sizing: auto;
   font-weight: 200;
   font-style: normal;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: repeat(3, minmax(200px, auto));
-  grid-gap: 4px;
-  background-color: rgb(114, 114, 114);
-  padding: 20px;
-  transform: skewY(4deg);
 }
 
 .grid-container > div {
@@ -143,11 +165,22 @@ table {
   bottom: 10px;
   display:flex;
   position: fixed;
-  justify-content: space-between;
-  height: 10vh;
-  list-style-type: disc;
-  text-align: left;
+  /* justify-content: space-between; */
+  /* height: 10vh; */
+  text-align: center;
   z-index: 999;
+}
+
+.header_wrap_2 {
+  right: 20px;
+  text-align: right;
+  bottom: 10px;
+  display:flex;
+  position: fixed;
+  /* justify-content: space-between;
+  /* height: 10vh; */
+  /* text-align: center; */
+  z-index: 998; */
 }
 
 .header_wrap li {
@@ -155,60 +188,4 @@ table {
   font-size: 1.2rem;
   line-height: 5vh;
   padding-bottom: 40vw;
-}
-
-
-
-.gothic-a1-black {
-  font-family: "Gothic A1", sans-serif;
-  font-weight: 900;
-  font-style: normal;
-}
-
-.gothic-a1-extrabold {
-  font-family: "Gothic A1", sans-serif;
-  font-weight: 800;
-  font-style: normal;
-}
-
-.gothic-a1-bold {
-  font-family: "Gothic A1", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.gothic-a1-semibold {
-  font-family: "Gothic A1", sans-serif;
-  font-weight: 600;
-  font-style: normal;
-}
-
-.gothic-a1-medium {
-  font-family: "Gothic A1", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.gothic-a1-regular {
-  font-family: "Gothic A1", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.gothic-a1-light {
-  font-family: "Gothic A1", sans-serif;
-  font-weight: 300;
-  font-style: normal;
-}
-
-.gothic-a1-extralight {
-  font-family: "Gothic A1", sans-serif;
-  font-weight: 200;
-  font-style: normal;
-}
-
-.gothic-a1-thin {
-  font-family: "Gothic A1", sans-serif;
-  font-weight: 100;
-  font-style: normal;
 }
